New endpoints /deploys
Used to manage multi-sig deploys.
With a postgresql database and Bull (+ redis) to clean the db.
